--- a/src/data/projects/trustLens.mdx
+++ b/src/data/projects/trustLens.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'TrustLens'
 description: 'AI-powered browser extension that extracts trustworthy pros and cons from real customer reviews to help users make confident purchase decisions.'
-image: '/project/trustlens.png'
+image: '/project/TrustLens.png'
 technologies:
   [
     'React.js',
