--- a/src/data/projects/synqflow.mdx
+++ b/src/data/projects/synqflow.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'SynqFlow'
 description: 'A Zapier-like automation platform built on an event-driven architecture using Kafka.'
-image: '/project/synqflow.png'
+image: '/project/synqFlow.png'
 technologies:
   [
     'Next.js',
